# DitForRec

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: beauty_base.yaml  beauty_base_v10_embedding_diffusion.yaml  beauty_base_v11_sid_item_embedding.yaml  beauty_base_v2.yaml  beauty_base_v3_12layer.yaml  beauty_base_v4_strong_noise.yaml  beauty_base_v5_direct_head.yaml  beauty_base_v6_masked_direct.yaml  beauty_base_v7_dit_backbone.yaml  beauty_base_v7_sasrec_head.yaml  beauty_base_v8_regularized_dit.yaml  beauty_base_v9_multimodal_item_bpr.yaml  toy_debug.yaml
configs/ablations/: beauty_few_step_ddim.yaml  beauty_id_only_ddpm.yaml  beauty_no_correction.yaml  beauty_no_multimodal.yaml
scripts/: bootstrap.ps1
src/ditforrec/: config.py  evaluate.py  plot_training.py  train.py  utils.py
src/ditforrec/data/: amazon2014.py  dataset.py  features.py  preprocess.py  semantic_ids.py  toy.py
src/ditforrec/model/: diffusion.py  ditforrec.py  factory.py  modules.py
